opam-version: "2.0"
name: "ocaml-googlemaps"
version: "3.0"
maintainer: "o-marshmallow"
authors: "o-marshmallow"
homepage: "https://github.com/besport/ocaml-googlemaps"
bug-reports: "https://github.com/besport/ocaml-googlemaps/issues"
license: "undefined"
description: "Binding to the `Googlemaps` plugin using gen_js_api"
synopsis: "Binding to the `Googlemaps` plugin using gen_js_api"
dev-repo: "https://github.com/besport/ocaml-googlemaps.git"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0"}
  "dune" {>= "2.8"}
  "gen_js_api"
  "ocamlfind" {build}
  "js_of_ocaml"
]
